# daqtrace

./: Cargo.toml  README.md  build.rs  daqtrace.x
examples/: json.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs  parser.rs
qemu/: Cargo.toml  README.md
qemu/.cargo/: config
src/: lib.rs
tests/: ui.rs
tests/ui/: all_exprs_must_be_tagged.rs  all_exprs_must_be_tagged.stderr  enough_args.rs  enough_args.stderr  sink_must_be_sink.rs  sink_must_be_sink.stderr  trace_key_is_valid_identifier.rs  trace_key_is_valid_identifier.stderr
tests/ui/common/: mod.rs
