[package]
authors = ["Andy Goetz <andy@andygoetz.org>"]
edition = "2018"
readme = "README.md"
name = "daqtrace"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/apgoetz/daqtrace"
homepage = "https://github.com/apgoetz/daqtrace"
description = "no-std friendly tracing library for data aquisition"

[features]
default = ["std"]
std = ["serde/std"]

[dependencies]
serde = { version = "1.0", default-features = false}
daqtrace-macros = {path = "macros"}

[dev-dependencies]
trybuild = "1.0"
serde_json = { version = "1.0"}


[[example]]
name = "json"
